small changes and great bodge to fix add photo button on mobile

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -55,7 +55,7 @@ p {
 
 .small-width hr {
     border-top: 2px solid black;
-    width: 95%;
+    width: 100%;
 }
 
 .btn-center {
@@ -67,3 +67,8 @@ p {
     font-size: 1.2rem;
 }
 
+@media (max-width: 767.98px) {
+    .hide {
+        display: none;
+    }
+}
